--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "http-cache",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
     "hono": "^4.11.3"
