--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "http-cache",
   "scripts": {
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "db:generate": "bunx drizzle-kit generate",
+    "db:migrate": "bunx drizzle-kit migrate",
+    "db:studio": "bux drizzle-kit studio",
+    "db:seed": "bun run ./src/db/seed.ts"
   },
   "dependencies": {
-    "hono": "^4.11.3"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-seed": "^0.3.1",
+    "hono": "^4.11.3",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.31.8"
   }
 }
